--- a/scorejam18/Packages/manifest.json
+++ b/scorejam18/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.lootlocker.lootlockersdk": "https://github.com/LootLocker/unity-sdk.git",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "1.8.3-preview",
     "com.unity.collab-proxy": "1.15.7",
